outputs/main/reevo_bpp_online_2025-08-07_21-55-44/problem_iter4_response9.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 43
    exact_fit = feasible & np.isclose(leftover, 0.0, atol=1
                                     ^
SyntaxError: '(' was never closed
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/SLOC.py", line 7, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 43
    exact_fit = feasible & np.isclose(leftover, 0.0, atol=1
                                     ^
SyntaxError: '(' was never closed
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/cyclomatic_complexity.py", line 7, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 43
    exact_fit = feasible & np.isclose(leftover, 0.0, atol=1
                                     ^
SyntaxError: '(' was never closed
